Switch more background to CDN
Signed-off-by: xiaoleGun <1592501605@qq.com>

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="wrapper">
          <section class="hero overlay">
             <div class="background-img">
-               <img src="picture/shouye.jpg" alt="">
+               <img src="https://s1.ax1x.com/2022/09/25/xETobn.jpg" alt="">
             </div>
             <header class="header default">
                <div class=" left-part">
@@ -85,7 +85,7 @@
                      <p>The Story of our love</p>
                   </div>
 				    <div class="background-img">
-               <img src="picture/beijing.jpeg" alt="">
+               <img src="https://s1.ax1x.com/2022/09/25/xETIDs.jpg" alt="">
             </div>
                </div>
                <div class="row">
@@ -147,7 +147,7 @@
          </section>
          <section class="date pt-150 pb-150 overlay">
             <div class="background-img">
-               <img src="picture/litang.jpg" alt="">
+               <img src="https://s1.ax1x.com/2022/09/25/xET7Eq.jpg" alt="">
             </div>
             <div class="container">
                <div class="row">
